# agentic-layer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  COMPONENT_GUIDELINES.md  Dockerfile  LICENSE  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml
docs/: Agentic-Layer-Spec.md
src/agentic/: cache.py  executor.py  governor.py  orchestrator.py  planner.py  reflector.py
src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/components/: index.ts
src/components/AgentDashboard/: AgentDashboard.module.css  AgentDashboard.tsx  index.ts
src/components/AgentLayer/: AgentLayer.module.css  AgentLayer.test.tsx  AgentLayer.tsx  index.ts
src/components/EthicalGuardrails/: EthicalGuardrails.module.css  EthicalGuardrails.tsx  index.ts
src/components/TaskPlanner/: TaskPlanner.module.css  TaskPlanner.tsx  index.ts
src/components/ToolExecutor/: ToolExecutor.module.css  ToolExecutor.tsx  index.ts
src/components/ui/button/: Button.module.css  Button.tsx
src/components/ui/card/: Card.module.css  Card.tsx
src/hooks/: index.ts  useAgent.ts  useEthicalGuardrails.ts  useTaskPlanner.ts  useToolExecutor.ts
src/lib/agent/: cache.ts  executor.ts  extractor.ts  governor.ts  index.ts  orchestrator.ts  planner.ts  types.ts  verifier.ts
src/lib/tools/: index.ts
src/lib/tools/llm/: anthropic.ts  openai.ts
src/store/: agentSlice.ts  index.ts  taskSlice.ts
src/types/: agent.ts
src/utils/: llm_client.py  logger.py
tests/: test_cache.py  test_executor.py  test_planner.py
(+1 files in other folders)
